--- a/templates/darkai_home.html
+++ b/templates/darkai_home.html
@@ -38,7 +38,7 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
-      background: #05060b url('https://i.imgur.com/YTCnPOE.png') no-repeat center center fixed;
+      background: #05060b;
       background-size: cover;
       color: #f2f3f5;
       position: relative;
@@ -56,6 +56,11 @@
       right: 0;
       bottom: 0;
       background: rgba(5, 6, 11, 0.75);
+      background-image: url('https://i.imgur.com/YTCnPOE.png');
+      background-size: cover;
+      background-position: center center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
       z-index: 0;
       pointer-events: none;
     }
