Fix navigation: add Vendor Intelligence Report to About page dropdown

--- a/templates/about.html
+++ b/templates/about.html
@@ -673,6 +673,7 @@
       <span class="nav-dropdown-toggle">Reports</span>
       <div class="nav-dropdown-menu">
         <a href="/reports/2025-deepfake-report">2025 Deepfake Report</a>
+        <a href="/reports/vendor-intelligence-report">Vendor Intelligence Report</a>
       </div>
     </div>
     <a href="shadowstack">ShadowStack</a>
