--- a/templates/about.html
+++ b/templates/about.html
@@ -52,12 +52,23 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: rgba(5, 6, 11, 0.75);
       background-image: url('https://i.imgur.com/YTCnPOE.png');
       background-size: cover;
       background-position: center center;
       background-attachment: fixed;
       background-repeat: no-repeat;
+      z-index: 0;
+      pointer-events: none;
+    }
+    
+    body::after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(5, 6, 11, 0.85);
       z-index: 0;
       pointer-events: none;
     }
