--- a/blackwire/templates/_blackwire_navigation.html
+++ b/blackwire/templates/_blackwire_navigation.html
@@ -24,8 +24,8 @@
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
-  max-width: 100%;
+  width: 100vw;
+  max-width: 100vw;
   height: var(--nav-height, 64px);
   min-height: 64px;
   display: flex;
@@ -40,6 +40,9 @@
   box-sizing: border-box;
   margin: 0;
   flex-shrink: 0;
+  /* Break out of any parent container constraints */
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
 }
 
 .nav__brand {
