--- a/templates/darkai_home.html
+++ b/templates/darkai_home.html
@@ -192,7 +192,7 @@
         border: none;
         box-shadow: none;
         margin-top: 0;
-        margin-left: 1rem;
+        margin-left: 0;
         display: none;
       }
       
