--- a/templates/report_vendor_intelligence.html
+++ b/templates/report_vendor_intelligence.html
@@ -336,7 +336,7 @@
         border: none;
         box-shadow: none;
         margin-top: 0;
-        margin-left: 1rem;
+        margin-left: 0;
         display: none;
       }
       
